# Turn_basedGame

./: Base.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  GameState.cpp  GameState.h  README.md  UndeadFactory.cpp  UndeadFactory.h  game_loader.txt  main.cpp
GameUnits/: Base.cpp  Base.h
Weapons/: Ability.cpp  Ability.h  Firearm.cpp  Firearm.h  Health.cpp  Health.h  MeleeWeapon.cpp  MeleeWeapon.h  Weapon.cpp  Weapon.h
html/: Ability_8h_source.html  Armor_8h_source.html  Base_8h_source.html  Comander_8h_source.html  ConfigLoader_8h_source.html  DancerWithBlades_8h_source.html  DeathKnight_8h_source.html  Dibbuk_8h_source.html  DreadLord_8h_source.html  Firearm_8h_source.html  GameState_8h_source.html  Ghost_8h_source.html  Gul_8h_source.html  Healer_8h_source.html  Health_8h_source.html  HeavyArmor_8h_source.html  Infantryman_8h_source.html  Knight_8h_source.html  LeatherArmor_8h_source.html  Litch_8h_source.html  LivingUnit_8h_source.html  MediumArmor_8h_source.html  MeleeWeapon_8h_source.html  Necromancer_8h_source.html  Paladin_8h_source.html  Reverant_8h_source.html  Sagittarius_8h_source.html  Skeleton_8h_source.html  Unarmored_8h_source.html  UndeadCaster_8h_source.html  UndeadFactory_8h_source.html  UndeadHunter_8h_source.html  UndeadTypes_8h_source.html  Unit_8h_source.html  UnlivingUnit_8h_source.html  Weapon_8h_source.html  Wizard_8h_source.html  Zombi_8h_source.html  annotated.html  classAbility-members.html  (+257 more)
latex/: Ability_8h_source.tex  Armor_8h_source.tex  Base_8h_source.tex  Comander_8h_source.tex  ConfigLoader_8h_source.tex  DancerWithBlades_8h_source.tex  DeathKnight_8h_source.tex  Dibbuk_8h_source.tex  DreadLord_8h_source.tex  Firearm_8h_source.tex  GameState_8h_source.tex  Ghost_8h_source.tex  Gul_8h_source.tex  Healer_8h_source.tex  Health_8h_source.tex  HeavyArmor_8h_source.tex  Infantryman_8h_source.tex  (+123 more)
(+76 files in other folders)
